--- a/configuration-example.yaml
+++ b/configuration-example.yaml
@@ -17,3 +17,10 @@ database:
     port: 5433                # DB_RO_PORT - int, port on which the database for reading data
     user: test_user_ro        # DB_RO_USER - string, user to connect to the database for reading data
     password: testPasswordRo  # DB_RO_PAS - string, password for connecting to the database for reading data
+
+app:
+  tgBot:
+    token: 6870999386:AAGccloydrBobPuFvzjrMWYKkLpMRSzxy3K   # TG_TOKEN - string, token for telegram bot
+    admins:                                                 # TG_ADMINS - string "hurdur1, hurdur2, hurdur3"
+      - hurdur1
+      - hurdur2
