--- a/configuration-example.yaml
+++ b/configuration-example.yaml
@@ -23,6 +23,10 @@ database:
 app:
   tgBot:
     token: 6870999386:AAGccloydrBobPuFvzjrMWYKkLpMRSzxy3K   # TG_TOKEN - string, token for telegram bot
-    admins:                                                 # TG_ADMINS - string "hurdur1, hurdur2, hurdur3"
+    admins:                                                 # TG_ADMINS - string, "hurdur1, hurdur2, hurdur3"
       - hurdur1
       - hurdur2
+    recordTime:                                             # TG_RD_TM - string, "11:30:00, 15:00, 18:00:00"
+      - '11:30:00'
+      - '15:00'
+      - '18:00:00'
