--- a/configuration-example.yaml
+++ b/configuration-example.yaml
@@ -30,3 +30,4 @@ app:
       - '11:30:00'
       - '15:00'
       - '18:00:00'
+    recordMonth: 2                                          # TG_RD_MT - int, number of months available for recording
